whereami/whereami-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-vs
  namespace: whereami
spec:
  gateways:
  - asm-ingress/asm-ingressgateway
  hosts:
  - 'whereami-test.alexmattson.demo.altostrat.com'
  http:
  - route:
    - destination:
        host: whereami
        port:
          number: 80
